--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,35 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.list{
+  position: relative;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  top: 50px;
+  font-size: 40px;
+  left: 760px;
+ 
+  list-style-type: none;
+  color: white;
+  text-decoration: none;
+  max-width: 20px;
+ 
+}
+
+
+.list2{
+  position: relative;
+  display: flex;
+  right: 90px;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: 40px;
+  list-style-type: none;
   color: white;
+  text-decoration: none;
+  max-width: 20px;
+  left: 590px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
