--- a/src/components/styles/ShowMovies.css
+++ b/src/components/styles/ShowMovies.css
@@ -1,4 +1,25 @@
+::-webkit-scrollbar {
+    width: 1em;
+    display: none;
+}
+::-webkit-scrollbar-track {
+    background-color: transparent;
+    display: none;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #817059;
+  border-radius:10px;
+  display: none;
+  
+}
 
+.movies-container{
+    width: 100%;
+    height: 100vh;
+    overflow: auto;
+
+    
+}
 
 .card-movies{
     width: 300px;
@@ -13,6 +34,7 @@
     margin: 20px;
     box-shadow: 1px 1px 1px 1px  black;
     margin-top: 50px;
+    cursor: pointer;
 }
 
 img{
@@ -25,14 +47,16 @@ img{
 }
 
 .button{
-    position: relative;
-    right: 12px;
-    top: 15px;
+   
     background-color: rgb(246, 7, 70);
 }
 
 button{
     border-radius: 20px;
+    width: 300px;
+    position: relative;
+    top: 20px;
+    left: 180px;
    
     
 }
@@ -42,5 +66,6 @@ button{
     top: 210px;
     display: inline-block;
     font-size: 30px;
-    color: rgb(246, 7, 70);
+    color: rgb(134, 131, 131);
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
