--- a/src/components/styles/ShowEachMovie.css
+++ b/src/components/styles/ShowEachMovie.css
@@ -7,6 +7,7 @@
     border: 2px solid black;
     box-shadow: 1px 1px 1px 1px  black;
     border-radius: 10px;
+    background-color: rgb(126, 126, 126);
     
 }
 
