--- a/src/components/styles/ShowMovies.css
+++ b/src/components/styles/ShowMovies.css
@@ -14,12 +14,13 @@
 }
 
 .movies-container{
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     overflow: auto;
     display: flex;
     position: relative;
-    right: 120px;
+    flex-wrap: wrap;
+
     
 }
 
