Criando formulário de login e cadastro e fazendo validações

--- a/src/App.css
+++ b/src/App.css
@@ -33,3 +33,19 @@
   left: 590px;
 }
 
+@media screen and (max-width: 960px) {
+    
+    li{
+      position: relative;
+      left: 400px;
+      top: 40px;
+    }
+
+    .list{
+      z-index: 1;
+    }
+}
+
+
+
+ 
