--- a/src/components/styles/CreateMovie.css
+++ b/src/components/styles/CreateMovie.css
@@ -52,15 +52,12 @@ select{
     font-family: 'Times New Roman', Times, serif;
 }
 
-button{
+
+
+.button-create-movies{
     position: relative;
-    bottom: 5px;
-    left: 2px;
-    width: 95%;
-    height: 50px;
-    font-size: 20px;
-    background-color: white;
-    cursor: pointer;
+    left: 33px;
+    top: 5px;
     
 }
 
@@ -85,10 +82,7 @@ button{
 h4{
     color: white;
 
-    
 }
-
-
 
 .img{
     width: 100%;
@@ -97,5 +91,3 @@ h4{
     bottom: 50px;
     z-index: -1;
   }
-
- 
