--- a/src/components/styles/ShowEachMovie.css
+++ b/src/components/styles/ShowEachMovie.css
@@ -1,7 +1,7 @@
 .movie-information {
     position: relative;
-    left: 420px;
-    top: 50px;
+    top: 380px;
+    left: 55px;
     width: 850px;
     height: 300px;
     border: 2px solid black;
@@ -13,8 +13,8 @@
 
 .image-movie{
     position: absolute;
-    bottom: 208px;
-    left: 90px;
+    top: 150px;
+    left: 340px;
     height: 300px;
     border: 2px solid black;
     box-shadow: 1px 1px 1px 1px  black;
@@ -51,3 +51,13 @@
     text-align: center;
     left: 150px;
 }
+
+@media screen and (max-width: 1920px) {
+    
+    .movie-information{
+        position: relative;
+        left: 700px;
+        top: 56px;    }
+  }
+  
+  
