--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,16 @@
   padding: 0;
 }
 
+body{
+  background-image: url('./assets/imagem.jpg');
+  width: 100vw;
+  height: 100vh;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+
 .list{
   position: relative;
   display: flex;
@@ -33,19 +43,13 @@
   left: 590px;
 }
 
-@media screen and (max-width: 960px) {
-    
-    li{
-      position: relative;
-      left: 400px;
-      top: 40px;
-    }
-
-    .list{
-      z-index: 1;
-    }
-}
-
-
-
+input{
+  display: block;
+  font-size: 25px;
+  text-align: center;
+  margin: 10px;
+  padding: 5px;
+  font-family: 'Times New Roman', Times, serif;
+  border-radius: 20px;
  
+}
