--- a/src/components/styles/CreateMovie.css
+++ b/src/components/styles/CreateMovie.css
@@ -1,26 +1,19 @@
-.card{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+.container-create-movies{
+    width: 400px;
+    margin: 0 auto;
+    position: relative;
+    top: 90px;
+    display: flex;
+    justify-content: center;
     
-    background-color: rgba(0, 0, 0, 0.2);
+    
 }
-
-body{
-    background-image: url('../../assets/imagem.jpg');
-    width: 100vw;
-    height: 100vh;
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-}
-
 
 
 fieldset{
     border: 3px solid dodgerblue;
     padding: 10px;
+    border-radius: 20px;
 }
 
 legend{
@@ -30,16 +23,7 @@ legend{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-input{
-    display: block;
-    font-size: 25px;
-    text-align: center;
-    margin: 15px;
-    padding: 5px;
-    font-family: 'Times New Roman', Times, serif;
-    
-    
-}
+
 
 select{
     display: flex;
@@ -50,21 +34,26 @@ select{
     bottom: 5px;
     font-size: 25px;
     font-family: 'Times New Roman', Times, serif;
+    border-radius: 15px;
 }
 
 
 
 .button-create-movies{
-    position: relative;
-    left: 33px;
-    top: 5px;
-    
+  width: 300px;
+  height: 35px;
+  border-radius: 20px;
+  position: relative;
+  left: 26px;
+  background-color: white;
+  cursor: pointer;
 }
 
-.inputs{
+.inputs-create-movies{
     position: relative;
     bottom: 10px;
-    font-size: 40px;
+    
+    
 }
 
 .navBar{
@@ -79,10 +68,6 @@ select{
    
 }
 
-h4{
-    color: white;
-
-}
 
 .img{
     width: 100%;
@@ -91,3 +76,13 @@ h4{
     bottom: 50px;
     z-index: -1;
   }
+
+.link-to-show-movies{
+   text-decoration: none;
+    color: white;
+    font-size: 50px;
+    position: relative;
+    bottom: 30px;
+    display: flex;
+    justify-content: center;
+}
