--- a/src/components/styles/Login.css
+++ b/src/components/styles/Login.css
@@ -1,37 +1,42 @@
-body {
-    display: flex;
-    justify-content: center;
-
-}
 
 .container-login {
     width: 400px;
-    height: 400px;
+    height: 300px;
     display: flex;
     justify-content: center;
     border: 2px solid black;
+    border-radius: 20px;
+    margin: 0 auto;
+    position: relative;
+    top: 50px;
+    box-shadow: 10px 5px 5px black;
+    
 }
 
 .input-login{
     height: 30px;
     margin-top: 30px;
+    border-radius: 20px;
 }
 
 .button-login{
     width: 300px;
-    height: 30px;
+    height: 38px;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
-    left: 28px;
+    left: 13px;
+    background-color: white;
+    cursor: pointer;
+    border-radius: 20px;
 }
 
 .register-login{
     display: flex;
     justify-content: center;
-    
     margin-top: 15px;
+    font-size: 20px;
     
 }
 
@@ -42,5 +47,7 @@ body {
 .text-register{
     position: relative;
     left: 5px;
+    color: white;
+    font-size: 20px;
 }
 
