--- a/src/components/styles/ShowEachMovie.css
+++ b/src/components/styles/ShowEachMovie.css
@@ -1,26 +1,34 @@
+
+
 .movie-information {
     position: relative;
-    top: 380px;
-    left: 55px;
-    width: 850px;
+    top: 100px;
+    left: 550px;
+    width: 800px;
     height: 300px;
     border: 2px solid black;
-    box-shadow: 1px 1px 1px 1px  black;
+    box-shadow: 1px 1px 1px 1px black;
     border-radius: 10px;
     background-color: rgb(126, 126, 126);
-    
+
 }
 
-.image-movie{
+.image-container-each-movie {
     position: absolute;
-    top: 150px;
-    left: 340px;
+    top: 157px;
+    left: 40px;
     height: 300px;
     border: 2px solid black;
-    box-shadow: 1px 1px 1px 1px  black;
+    border-radius: 20px;
+    box-shadow: 1px 1px 1px 1px black;
 }
 
-.title{
+.image-each-movie{
+    border-radius: 20px;
+    height: 300px;
+}
+
+.title {
     position: relative;
     text-align: center;
     margin-top: 5px;
@@ -28,36 +36,36 @@
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
-.synopsis{
+.synopsis {
     margin-left: 10px;
     font-size: 16px;
     color: rgb(0, 0, 0);
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.genre{
+.genre {
     font-size: 22px;
     position: relative;
     right: 150px;
-    top: 15px;
+    top: 4px;
     text-align: center;
-    
+
 }
 
-.duration{
+.duration {
     font-size: 22px;
     position: relative;
-    bottom: 10px;
+    bottom: 20px;
     text-align: center;
     left: 150px;
 }
 
-@media screen and (max-width: 1920px) {
-    
-    .movie-information{
-        position: relative;
-        left: 700px;
-        top: 56px;    }
-  }
-  
-  
+.link-movies-navigate{
+    display: flex;
+    position: relative;
+    top: 40px;
+    justify-content: center;
+    font-size: 50px;
+    color: white;
+    cursor: pointer;
+}
