--- a/src/components/styles/ShowMovies.css
+++ b/src/components/styles/ShowMovies.css
@@ -2,64 +2,93 @@
     width: 1em;
     display: none;
 }
+
 ::-webkit-scrollbar-track {
     background-color: transparent;
     display: none;
 }
+
 ::-webkit-scrollbar-thumb {
-  background-color: #817059;
-  border-radius:10px;
-  display: none;
-  
+    background-color: #817059;
+    border-radius: 10px;
+    display: none;
+
 }
 
-.movies-container{
+.show-movies-container {
     width: 100%;
     height: 100vh;
     overflow: auto;
     display: flex;
     position: relative;
+    right: 30px;
     flex-wrap: wrap;
-
+    justify-content: center;
+    
     
 }
 
-.card-movies{
-    width: 300px;
-    height: 200px;
+
+
+.show-card-movies {
+    max-width: 300px;
+    max-height: 200px;
     background-color: rgba(0, 0, 0, 0.2);
     border: 2px solid black;
     border-radius: 10px;
-    position: relative;
-    text-align: center;
-   
-    left: 160px;
-    margin: 20px;
-    box-shadow: 1px 1px 1px 1px  black;
-    margin-top: 50px;
+    box-shadow: 2px 5px 5px 1px black;
     cursor: pointer;
+    position: relative;
+    margin: 70px;
+    top: 120px;
+
+
 }
 
-img{
+.img-show-movies {
     width: 300px;
     height: 202px;
     position: relative;
-    bottom: 35px;
     z-index: -1;
     border-radius: 10px;
 }
 
-
-
-.info{
+.link-to-create-movies {
+    height: 60px;
+    font-size: 60px;
     position: relative;
-    top: 210px;
-    display: inline-block;
-    font-size: 30px;
-    color: rgb(134, 131, 131);
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    top: 30px;
+    left: 490px;
+    cursor: pointer;
+    color: white;
+    
+}
+
+.link-movies{
+    text-decoration: none;
+    height: 0px;
+    
 }
 
 
 
-   
+.button-show-movies {
+    position: relative;
+    width: 300px;
+    height: 40px;
+    top: 5px;
+    position: relative;
+    border-radius: 20px;
+    background-color: white;
+    font-size: 22px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
+}
+
+.name-movie {
+    display: flex;
+    justify-content: center;
+    font-size: 40px;
+    color: black;
+    
+}
